@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-25T16:22:06Z",
+  "timestamp" : "2024-05-26T08:22:34Z",
   "count_outdated" : 752,
   "uniques_outdated" : 369,
-  "count" : 778,
-  "uniques" : 388,
+  "count" : 779,
+  "uniques" : 389,
   "clones" : [
     {
       "timestamp": "2024-05-13T00:00:00Z",
@@ -121,6 +121,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-05-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
