@@ -1,5 +1,5 @@
 {
-  "count": 26,
+  "count": 27,
   "uniques": 4,
   "clones": [
     {
@@ -66,6 +66,11 @@
       "timestamp": "2024-05-25T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-05-26T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
