@@ -1,3 +1,12 @@
+2024-05-26T08:22:34Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9241849438 # 307
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-26
+* notice: last 14d: unq all: 4 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 369 752 / 388 778
+* notice: next accum: outdated-unq outdated-all / unq all: 369 752 / 389 779
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-05-26]
+
 2024-05-25T16:22:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9236755401 # 305
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-25
